<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.controller.LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="150dp"
            android:hint="@string/prompt_name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass"
            app:layout_constraintTop_toBottomOf="@+id/user"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="10dp"
            android:hint="@string/prompt_pass"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/host"
            app:layout_constraintTop_toBottomOf="@+id/pass"
            android:layout_marginTop="10dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_marginEnd="120dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/prompt_host"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            app:layout_constraintStart_toEndOf="@+id/host"
            app:layout_constraintTop_toBottomOf="@+id/pass" android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/prompt_port"
            android:layout_marginEnd="20dp" android:id="@+id/port"/>
    <TextView
            android:text="@string/login_title"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host"
        tools:text="@string/login_connect" />

    <ListView
        android:id="@+id/taskList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect" />

</androidx.constraintlayout.widget.ConstraintLayout>